--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/trquoccuong/Server-Sent-Events-Nodejs.git"
+    "url": "git+https://github.com/JaonMicle/sse-node.git"
   },
-  "author": "Tran Quoc Cuong <trquoccuong@gmail.com>",
+  "author": "Tran Quoc Cuong <jaonmicle@outlook.com>",
   "license": "MIT"
 }
