--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "type": "git",
     "url": "git+https://github.com/JaonMicle/sse-node.git"
   },
-  "author": "Tran Quoc Cuong <jaonmicle@outlook.com>",
+  "author": "Jaon Micle <jaonmicle@outlook.com>",
   "license": "MIT"
 }
