--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sse-node",
+  "name": "nodejs-sse",
   "version": "1.0.0",
   "description": "server sent event",
   "main": "index.js",
