--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "keywords": [
     "sse"
   ],
-  "author": "Jaon Micle",
+  "author": "w3ever",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/JaonMicle/sse-node/issues"
