--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JaonMicle/sse-node.git"
+    "url": "git+https://github.com/w3ever/sse-node.git"
   },
   "keywords": [
     "sse"
@@ -16,7 +16,7 @@
   "author": "w3ever",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/JaonMicle/sse-node/issues"
+    "url": "https://github.com/w3ever/sse-node/issues"
   },
-  "homepage": "https://github.com/JaonMicle/sse-node#readme"
+  "homepage": "https://github.com/w3ever/sse-node#readme"
 }
